@@ -4,11 +4,14 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
+import ru.yandex.practicum.filmorate.exception.FilmDoesNotExistException;
+import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.storage.FilmStorage;
-import ru.yandex.practicum.filmorate.storage.UserStorage;
+import ru.yandex.practicum.filmorate.storage.inheritance.FilmStorage;
 
+import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -17,44 +20,51 @@ import java.util.List;
 @RequiredArgsConstructor
 public class FilmService {
     private final FilmStorage filmStorage;
-    private final UserStorage userStorage;
-
 
     public Film createFilm(Film film) {
         return filmStorage.createFilm(film);
     }
 
     public Film updateFilm(Film film) {
+        if (filmStorage.getFilm(film.getId()) == null) {
+            log.warn("Данного id фильма не существует {}", film.getId());
+            throw new FilmDoesNotExistException();
+        }
         return filmStorage.updateFilm(film);
     }
 
-    public Film getFilm(long id) {
-        return filmStorage.getFilm(id);
+    public void deleteFilm(long filmId) {
+        filmStorage.deleteFilm(filmId);
     }
 
-    public List<Film> getFilms() {
+    public Film getFilm(long id) {
+        Film film = filmStorage.getFilm(id);
+        if (film == null) {
+            throw new NotFoundException("Данного id фильма не существует " + film.getId());
+        }
+        return film;
+    }
+
+    public Collection<Film> getFilms() {
         return filmStorage.getFilms();
     }
 
     public void addLikeFilm(long filmId, long userId) {
-        userStorage.getUser(userId);
-        filmStorage.getFilm(filmId).getLikesFilm().add(userId);
-        log.debug("PUT Запрос. Пользователь с ID = {} лайкнул фильм с ID = {}", userId, filmId);
+        filmStorage.addLike(filmId, userId);
     }
 
     public void removeLikeFilm(long filmId, long userId) {
-        userStorage.getUser(userId);
-        filmStorage.getFilm(filmId).getLikesFilm().remove(userId);
-        log.debug("DELETE Запрос. Пользователь с ID = {} удалил лайк у фильма с ID = {}", userId, filmId);
+        filmStorage.deleteLike(filmId, userId);
     }
 
     public List<Film> getPopularFilm(int count) {
-        List<Film> popularFilms = filmStorage.getFilms().stream()
-                .sorted((film1, film2) -> Integer.compare(film2.getLikesFilm().size(),
-                        film1.getLikesFilm().size()))
+        return filmStorage.getFilms().stream()
+                .sorted((f1, f2) -> f2.getLikesFilm().size() - f1.getLikesFilm().size())
                 .limit(count)
-                .toList();
-        log.trace("GET Запрос. Список популярных фильмов:\n{}", popularFilms);
-        return popularFilms;
+                .collect(Collectors.toList());
+    }
+
+    public List<Film> getRecommendations(long userId) {
+        return filmStorage.getRecommendations(userId);
     }
 }
